# coils_without_optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
boozcoils/: __main__.py  cli.py  coils_utils.py  config.py  geom_boozer.py  log_utils.py  opt_runner.py  plot_helpers.py  trace_utils.py
coils_without_optimization/: __init__.py  __main__.py  booz_config.py  booz_driver.py  coils_utils.py  geom_boozer.py  log_utils.py  nearaxis_config.py  nearaxis_driver.py  opt_runner.py  plot_helpers.py  toml_config.py  trace_utils.py
coils_without_optimization/input_files/: .gitkeep  wout_LandremanPaul2021_QA_reactorScale_lowres.nc  wout_LandremanPaul2021_QH_reactorScale_lowres.nc
examples/: booz_example.toml  nearaxis_example.toml
input_files/: wout_LandremanPaul2021_QA_reactorScale_lowres.nc  wout_LandremanPaul2021_QH_reactorScale_lowres.nc
scripts/: coils_from_BOOZ_XFORM.py
